--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "designerei/conplate-framework",
     "type": "contao-bundle",
     "require": {
-        "contao/core-bundle": "^5.3",
-        "terminal42/contao-pageimage": "^4.0"
+        "contao/core-bundle": "^5.4"
     },
     "license": "LGPL-3.0-or-later",
     "autoload": {
@@ -21,5 +20,11 @@
     ],
     "extra": {
         "contao-manager-plugin": "designerei\\ConplateFrameworkBundle\\ContaoManager\\Plugin"
+    },
+    "config": {
+        "allow-plugins": {
+            "contao-components/installer": true,
+            "php-http/discovery": true
+        }
     }
 }
