--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,14 @@
     "name": "designerei/conplate-framework",
     "type": "contao-bundle",
     "require": {
-        "contao/core-bundle": "^5.6"
+        "contao/core-bundle": "^5.3",
+        "designerei/contao-tailwind-bridge": "^1.0",
+        "designerei/contao-layout": "^1.0"
     },
+    "repositories": [
+        { "type": "vcs", "url": "git@github.com:designerei/contao-tailwind-bridge.git" },
+        { "type": "vcs", "url": "git@github.com:designerei/contao-layout.git" }
+    ],
     "license": "LGPL-3.0-or-later",
     "autoload": {
         "psr-4": {
